2008-05-06  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #424744

	* e-attachment-bar.c:
	* e-unicode.c:
	Use camel-iconv.c instead of e-iconv.h (now deprecated).

2008-04-30  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #528288

	* e-filter-bar.c: (get_property): Do not return any query
	with empty text from search bar.

2008-04-25  Danny Baumann  <dannybaumann@web.de>

	** Fix for bug #529893

	* e-dateedit.c (create_children):
	* e-combo-cell-editable.c (build_popup):
	* e-cell-date-edit.c (e_cell_date_edit_init):
	Properly set type hint on popup windows.

2008-04-22  Matthew Barnes  <mbarnes@Redhat.com>

	** Fixes part of bug #529641

	* e-dateedit.c (create_children):
	* e-map.c (e_map_new):
	Prefer the term "drop-down combination box" to "combo box" per the
	GNOME Documentation Style Guide.

2008-04-20  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #334444

	* e-attachment-bar.c: (e_attachment_bar_add_attachment_silent),
	(e_attachment_bar_refresh):
	* e-attachment-bar.h:

2008-04-17  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #526739

	* e-attachment.h: (struct _EAttachment):
	* e-attachment.c: (finalise), (init), (attachment_guess_mime_type),
	(e_attachment_new), (struct DownloadInfo), (download_info_free),
	(data_ready_cb), (download_to_local_path),
	(e_attachment_new_remote_file):
	Use gio instead of gnome-vfs to download remote files.
	* e-image-chooser.c: (image_drag_data_received_cb):
	Use new util function to read file.
	* e-attachment-bar.c: (size_to_string): Stolen from gnome-vfs.

2008-04-14  Matthew Barnes  <mbarnes@redhat.com>

	* e-attachment-bar.c
	(e_attachment_bar_bonobo_ui_populate_with_recent):
	Fix a compiler warning.

2008-04-11  Suman Manjunath  <msuman@novell.com>

	** Fix for bug #517134

	* e-attachment-bar.c: (destroy), (init): Related changes. 
	(e_attachment_bar_bonobo_ui_populate_with_recent): New API to populate
	a bonoboUI menu with "Recent Documents". 